Move website to folkswithhats.org

--- a/index.html
+++ b/index.html
@@ -1,71 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-        <meta name="title" content="Fedy - Tweak your Fedora" />
-        <meta name="description" content="Fedy lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
+<html xmlns="http://www.w3.org/1999/xhtml">    
+  <head>
+    <meta http-equiv="refresh" content="0;URL='http://folkswithhats.org/'" />
 
-        <title>Fedy - Tweak your Fedora</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+    <meta name="title" content="Fedy - Tweak your Fedora" />
+    <meta name="description" content="Fedy lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
 
-        <link rel="stylesheet" type="text/css" media="all" href="./resources/css/opensans.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/stylesheet.css">
-        <link rel="shortcut icon" href="./resources/img/favicon.png" type="image/x-icon" />
-        <link rel="image_src" href="./resources/img/preview.png" />
+    <title>Fedy - Tweak your Fedora</title> 
 
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-47625805-1', 'satya164.github.io');
-          ga('send', 'pageview');
-        </script>
-    </head>
-    <body>
-        <section id="home" class="home">
-            <div class="content feature">
-                <div class="content-inner">
-                    <h1 class="title">Install codecs, software, and more...</h1>
-
-                    <p>Fedy lets you install multimedia codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just a few clicks.</p>
-
-                    <p>To install Fedy in Fedora, open a Terminal and run the following command,</p>
-
-                    <div class="code">
-                        <code>bash -c 'su -c "curl <a href="https://satya164.github.io/fedy/fedy-installer">https://satya164.github.io/fedy/fedy-installer</a> -o fedy-installer && chmod +x fedy-installer && ./fedy-installer"'</code>
-                    </div>
-
-                    <div class="social">
-                        <a href="http://plus.google.com/share?url=http://satya164.github.io/fedy/">
-                            <img src="resources/img/googleplus.svg" />
-                        </a>
-                        <a href="http://www.facebook.com/sharer/sharer.php?u=http://satya164.github.io/fedy/">
-                            <img src="resources/img/facebook.svg" />
-                        </a>
-                        <a href="http://twitter.com/intent/tweet?text=Fedy makes setting up your Fedora a breeze&url=http://satya164.github.io/fedy/&via=satya164">
-                            <img src="resources/img/twitter.svg" />
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        <section id="more">
-            <div class="feature content">
-                <h1>Everything in an easy to use interface</h1>
-
-                <p>Fedy has a no-nonsense straightforward UI to get you started as quickly as possible. All the actions are queued so that you don't have to wait for something to finish.</p>
-
-                <img src="resources/img/fedy.png" />
-
-                <p>If you like Fedy, please support us by spreading the word. You can catch me on <a href="http://plus.google.com/114564489020097923600">Google+</a> or <a href="http://www.facebook.com/satya164">Facebook</a>. Also check out my <a href="http://wibblystuff.blogspot.com/">blog</a> and <a href="http://satya164.deviantart.com/">deviantArt</a> page :)</p>
-            </div>
-        </section>
-
-        <footer>
-            Fedy &#169; 2014 Satyajit Sahoo. Fedora<sup>TM</sup> is a trademark of Red Hat. All rights reserved. <a href="https://github.com/satya164/fedy/">Source Code</a>.
-        </footer>
-    </body>
+  </head>    
+  <body> 
+    <p>
+      This page has moved to <a href="http://folkswithhats.org/">folkswithhats.org</a>.
+    </p> 
+  </body>  
 </html>
